--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 p.green {
-    color: green;
+    color: #008000;
     background: #fff;
 }
 
@@ -19,7 +19,7 @@ a.header {
     background-image: linear-gradient(#e8fd00, #fff, #e8fd00);
     -webkit-text-stroke: 1px #000;
     background-clip: text;
-    font-size: 50px;
+    font-size: 4em;
     font-weight: normal;
     text-decoration: none;
     text-align: center;
@@ -27,6 +27,7 @@ a.header {
     display: block;
 }
 
+h1 { margin-top: 0; padding-top: 12px; }
 h1.yellow {
     color: #e8fd00;
 }
@@ -35,18 +36,18 @@ h2 {
     color: #000;
 }
 
-h3.a1 {
-    color: blue;
+.a1 {
+    color: #0000ff;
     background: #fff;
 }
 
-h3.a2 {
-    color: red;
+.a2 {
+    color: #ff0000;
     background: #fff;
 }
 
 h6.warn {
-    color: red;
+    color: #ff0000;
     background: #fff;
 }
 
@@ -81,7 +82,7 @@ A.menu:visited {
 }
 
 A.menu:hover {
-    color: green;
+    color: #008000;
     background: #000;
     cursor: pointer;
 }
@@ -92,22 +93,37 @@ A.menu:active {
     cursor: pointer;
 }
 
-.footer-cell {
+header {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+footer {
     background-color: #fff;
     vertical-align: top;
     border-radius: 6px;
     padding: 18px;
-    margin: 0 6px;
     position: relative;
     top: 6px;
+    font-size: .8em;
 }
 
-#body-table {
+#body {
     margin-bottom: 16px;
     width: 997px;
-    border-width: 5px;
-    border-color: #000;
-    background-color: #72b800;
     margin-left: auto;
     margin-right: auto;
 }
+
+.article {
+    background-color: #fff;
+    padding: 0 24px 12px 24px;
+    border-radius: 6px;
+}
+
+.blaise { color: #008000; }
+.crazyboy { color: #ff0000; }
+.eddie { color: #ff00ff; }
+
+table { border-collapse: collapse; width: 100%; }
+td { border: 1px solid #000; }
