More html compliant and no more font tags.

--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,8 @@ td { border: 1px solid #000; vertical-align: top; }
 .mart { color: #00f; }
 .mountain { color: #0f0; }
 .dew { color: #f00; }
+.ferris { color: #800000; }
+.state { color: #808000; }
 .sol { color: #f98700; }
 .mm { color: #2896fe; }
 .ix { color: #923eb8; }
