--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ ul.nav {
     width: 770px;
     margin: 0 auto 6px auto;
     padding: 0;
+    list-style-type: none;
 }
 
 ul.nav > li {
@@ -167,6 +168,7 @@ ul.nav > li {
 
 ul.nav > li > ul {
     display: none;
+    list-style-type: none;
 }
 
 ul.nav > li:hover {
@@ -182,6 +184,7 @@ ul.nav > li:hover > ul {
     top: 25px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     border-radius: 0 0 6px 6px;
+    z-index: 99;
 }
 
 ul.nav a {
